fix page overflow (created by viewport width)

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -29,83 +29,83 @@ img {
 /* Viewport width classification */
 
 .w-5 {
-    width: 5vw;
+    width: 5%;
 }
 
 .w-10 {
-    width: 10vw;
+    width: 10%;
 }
 
 .w-15 {
-    width: 15vw;
+    width: 15%;
 }
 
 .w-20 {
-    width: 20vw;
+    width: 20%;
 }
 
 .w-25 {
-    width: 25vw;
+    width: 25%;
 }
 
 .w-30 {
-    width: 30vw;
+    width: 30%;
 }
 
 .w-35 {
-    width: 35vw;
+    width: 35%;
 }
 
 .w-40 {
-    width: 40vw;
+    width: 40%;
 }
 
 .w-45 {
-    width: 45vw;
+    width: 45%;
 }
 
 .w-50 {
-    width: 50vw;
+    width: 50%;
 }
 
 .w-55 {
-    width: 55vw;
+    width: 55%;
 }
 
 .w-60 {
-    width: 60vw;
+    width: 60%;
 }
 
 .w-65 {
-    width: 65vw;
+    width: 65%;
 }
 
 .w-70 {
-    width: 70vw;
+    width: 70%;
 }
 
 .w-75 {
-    width: 75vw;
+    width: 75%;
 }
 
 .w-80 {
-    width: 80vw;
+    width: 80%;
 }
 
 .w-85 {
-    width: 85vw;
+    width: 85%;
 }
 
 .w-90 {
-    width: 90vw;
+    width: 90%;
 }
 
 .w-95 {
-    width: 95vw;
+    width: 95%;
 }
 
 .w-100 {
-    width: 100vw;
+    width: 100%;
 }
 
 /* flexbox classification */
@@ -327,6 +327,19 @@ header {
 .quote {
     color: white;
     text-align: center;
+}
+
+.about-me-container {
+    margin-left: 5rem;
+    margin-right: 5rem;
+}
+
+.profile-picture {
+    width: 200px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    border-radius: 50% 5% 5% 5%;
+    float: left;
 }
 
 
